--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://heyroocoke.github.io/cat-marker-cra/"
+  "homepage": "https://heyroocoke.github.io/cat-maker-cra/"
 }
